[package]
name = "fluid-let"
version = "0.1.0"
authors = ["ilammy"]
edition = "2018"
repository = "https://github.com/ilammy/fluid-let"
readme = "README.md"
keywords = ["dynamic scope", "dynamic variables", "fluid variables"]
categories = ["config"]
license = "MIT"

[badges]
travis-ci = { repository = "ilammy/fluid-let" }
appveyor = { repository = "ilammy/fluid-let" }
