[package]
name = "fluid-let"
version = "1.0.0"
authors = ["ilammy"]
edition = "2018"
description = "Dynamically scoped variables"
repository = "https://github.com/ilammy/fluid-let"
readme = "README.md"
keywords = ["dynamic", "fluid", "scope", "variables"]
categories = ["config"]
license = "MIT"

[dev-dependencies]
criterion = "0.3.0"

[[bench]]
name = "fluid-let"
harness = false
